add css properties

--- a/hobbies.html
+++ b/hobbies.html
@@ -1,7 +1,16 @@
-<h3>My Hobbies</h3>
-<ol>
-    <li>Programming</li>
-    <li>Watching sports like Formula 1 and NBA</li>
-    <li>Learning Spanish</li>
-    <li>Working out</li>
-</ol>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>My Hobbies</title>
+        <h1>My Hobbies</h1>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body>
+        <ol>
+            <li>Programming</li>
+            <li>Watching sports like Formula 1 and NBA</li>
+            <li>Learning Spanish</li>
+            <li>Working out</li>
+        </ol>
+    </body>
+</html>
